fix(form): add spacing between questions

--- a/css/styles.css
+++ b/css/styles.css
@@ -178,13 +178,14 @@ input.submit_button:focus {
 
 #plugin_formcreator_form.plugin_formcreator_form_design .grid-stack-item {
    line-height: 32px;
-   background: #F0F0F0;
 }
 
 #plugin_formcreator_form.plugin_formcreator_form_design .grid-stack-item .grid-stack-item-content {
    text-align: left;
    padding-left: 16px;
    padding-right: 24px;
+   margin: 0 2px;
+   background: #F0F0F0;
 }
 
 #plugin_formcreator_form.plugin_formcreator_form_design .grid-stack-item.ui-draggable-dragging {
